--- a/switchmultiple.html
+++ b/switchmultiple.html
@@ -25,7 +25,7 @@
             break;
 
         case (marks >=40 && marks <50):
-            document.write("Not Satisfied");
+            document.write("Less Satisfied");
             break;
 
         default:
